# noxa

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.json  config.json  config.schema.json  docker-compose.yml  env.example  gemini-extension.json  install.sh  manifest  proxies.example.txt  setup.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: deps.yml  release.yml
benchmarks/: README.md
code.claude.com/.noxa/content/code_claude_com/: docs.json  docs.md  index.json  index.md
commands/: batch.md  crawl.md  diff.md  map.md  search.md
config/: .env.example  config.example.toml
config/docker/: Dockerfile
config/docker/ci/: Dockerfile
crates/noxa-cli/: Cargo.toml
crates/noxa-cli/src/: cloud.rs  config.rs  main.rs  setup.rs  theme.rs
crates/noxa-cli/src/app/: batch.rs  cli.rs  crawl.rs  crawl_status.rs  crawl_watch.rs  diff_brand.rs  entry.rs  formatting.rs  llm.rs  logging.rs  mod.rs  printing.rs  rag_daemon.rs  rag_watch.rs  refresh.rs  research.rs  retrieve.rs  store_ops.rs  store_watch.rs  tests_primary.rs  tests_secondary.rs  watch.rs  watch_singleton.rs
crates/noxa-cli/src/app/fetching/: config.rs  extract.rs  inputs.rs  storage.rs
crates/noxa-cli/src/setup/: helpers.rs
crates/noxa-cli/tests/: lifecycle_integration.rs
crates/noxa-core/: Cargo.toml
crates/noxa-core/src/: brand.rs  diff.rs  error.rs  extractor.rs  js_eval.rs  lib.rs  markdown.rs  metadata.rs  structured_data.rs  types.rs
crates/noxa-core/src/brand/: colors.rs  css.rs  fonts.rs  logos.rs  tests.rs
crates/noxa-core/src/extractor/: form_integration_tests.rs  include.rs  recovery.rs  scoring.rs  selectors.rs  tests.rs
crates/noxa-core/src/llm/: body.rs  cleanup.rs  links.rs  mod.rs
crates/noxa-core/src/llm/body/: blocks.rs  headings.rs  repeated.rs  tests.rs
crates/noxa-core/src/llm/cleanup/: alt.rs  assets.rs  basic.rs  css.rs  tests.rs  ui.rs  word_lists.rs
crates/noxa-core/src/markdown/: assets.rs  blocks.rs  render.rs  tests.rs
crates/noxa-fetch/: Cargo.toml  README.md
crates/noxa-fetch/src/: browser.rs  client.rs  crawler.rs  document.rs  error.rs  lib.rs  linkedin.rs  proxy.rs  reddit.rs  search.rs  sitemap.rs  store.rs  tls.rs
crates/noxa-fetch/src/client/: batch.rs  fetch.rs  pool.rs  response.rs  tests.rs
crates/noxa-fetch/src/extractors/: amazon_product.rs  arxiv.rs  crates_io.rs  dev_to.rs  docker_hub.rs  ebay_listing.rs  ecommerce_product.rs  etsy_listing.rs  github_issue.rs  github_pr.rs  github_release.rs  github_repo.rs  hackernews.rs  http.rs  huggingface_dataset.rs  huggingface_model.rs  instagram_post.rs  instagram_profile.rs  linkedin_post.rs  mod.rs  npm.rs  product.rs  pypi.rs  reddit.rs  shopify_collection.rs  shopify_product.rs  stackoverflow.rs  substack_post.rs  summary.rs  trustpilot_reviews.rs  woocommerce_product.rs  youtube_video.rs
crates/noxa-fetch/tests/fixtures/extractors/: arxiv.xml  crates_io.json  dev_to.json  docker_hub.json  github_issue.json  github_pr.json  github_release.json  github_repo.json  hackernews.json  huggingface_dataset.json  huggingface_model.json  instagram_post.html  instagram_profile.json  linkedin_post.html  npm_downloads.json  npm_registry.json  product_page.html  pypi.json  reddit.json  shopify_collection.json  shopify_product.json  stackoverflow_answers.json  stackoverflow_question.json  substack_post.html  trustpilot.html  youtube_video.html
crates/noxa-llm/: Cargo.toml
crates/noxa-llm/src/: chain.rs  error.rs  extract.rs  lib.rs  testing.rs
crates/noxa-llm/src/providers/: anthropic.rs  gemini_cli.rs  mod.rs  ollama.rs  openai.rs
crates/noxa-mcp/: Cargo.toml  README.md
crates/noxa-mcp/src/: cloud.rs  config.rs  error.rs  lib.rs  main.rs  research.rs  serialization.rs  server.rs  test_support.rs  tools.rs  validation.rs
crates/noxa-mcp/src/server/: bootstrap.rs  content_tools.rs  intelligence_tools.rs  research.rs
crates/noxa-mcp/tests/: startup_harness.rs
crates/noxa-mcp/tests/support/: mod.rs
crates/noxa-pdf/: Cargo.toml
crates/noxa-pdf/src/: lib.rs
crates/noxa-rag/: Cargo.toml  README.md
crates/noxa-rag/src/: chunker.rs  config.rs  error.rs  factory.rs  lib.rs  mcp_bridge.rs  pipeline.rs  types.rs  url_util.rs
crates/noxa-rag/src/embed/: mod.rs  tei.rs
crates/noxa-rag/src/mcp_bridge/: bytestash.rs  executor.rs  io.rs  linkding.rs  memos.rs  mod.rs  paperless.rs
crates/noxa-rag/src/pipeline/: heartbeat.rs  process.rs  runtime.rs  scan.rs  startup_scan.rs  watcher.rs  worker.rs
crates/noxa-rag/src/pipeline/parse/: binary.rs  mod.rs  rich.rs  tests.rs  text.rs
crates/noxa-rag/src/store/: mod.rs  qdrant.rs
crates/noxa-rag/src/store/qdrant/: http.rs  lifecycle.rs  mod.rs  normalize.rs  payload.rs  tests.rs  vector_store.rs
crates/noxa-store/: Cargo.toml
crates/noxa-store/src/: content_store.rs  lib.rs  operations_log.rs  paths.rs  types.rs  url_validation.rs
crates/noxa-store/src/content_store/: enumerate.rs  manifest.rs  migrate.rs  permissions.rs  tests.rs  write.rs
crates/webclaw-cli/src/: main.rs
crates/webclaw-core/src/: extractor.rs  lib.rs  markdown.rs  noise.rs
crates/webclaw-fetch/src/: client.rs
docs/: CHANGELOG.md  bead-status-review.md  config.md  content-store.md  metadata-matrix.md
docs/reports/: live-extractor-cli-report-2026-04-26.md
docs/superpowers/plans/: 2026-04-26-full-upstream-extractor-parity-plan.md
docs/superpowers/specs/: 2026-04-26-full-upstream-extractor-parity-design.md
examples/: README.md
plugin/: gemini-extension.json
plugin/.claude-plugin/: plugin.json
plugin/skills/noxa/: SKILL.md
plugin/skills/noxa/references/: flags.md
plugins/: gemini-extension.json
plugins/.claude-plugin/: plugin.json
plugins/.codex-plugin/: plugin.json
plugins/commands/: extract.md  scrape.md  summarize.md
plugins/monitors/: monitors.json
plugins/skills/noxa/references/: flags.md
skill/: SKILL.md
skills/noxa/: SKILL.md
skills/noxa/references/: flags.md
(+304 files in other folders)
