[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.3.11"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/jmagar/noxa"

[workspace.dependencies]
noxa-core = { path = "crates/noxa-core" }
noxa-fetch = { path = "crates/noxa-fetch" }
noxa-llm = { path = "crates/noxa-llm" }
noxa-pdf = { path = "crates/noxa-pdf" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
