[package]
name = "noxa-mcp"
description = "MCP server for noxa web extraction toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "noxa_mcp"
path = "src/lib.rs"

[[bin]]
name = "noxa-mcp"
path = "src/main.rs"

[dependencies]
noxa-core = { workspace = true }
noxa-store = { workspace = true }
noxa-fetch = { workspace = true }
noxa-llm = { workspace = true }
noxa-pdf = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
wreq = { version = "6.0.0-rc.28", features = ["cookies", "gzip", "brotli", "zstd", "deflate"] }
url = "2"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
