[package]
name = "noxa-rag"
description = "RAG pipeline for noxa — TEI embeddings + Qdrant vector store"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "noxa-rag-daemon"
path = "src/bin/noxa-rag-daemon.rs"

[dependencies]
noxa-core = { workspace = true }
noxa-pdf = { path = "../noxa-pdf" }
# noxa-fetch provides extract_document() for DOCX/XLSX/CSV — reused rather than re-implemented.
noxa-fetch = { workspace = true }
# URL validation: validate_public_http_url_with_resolver for SSRF prevention (noxa-xv7.19/20)
noxa-store = { path = "../noxa-store" }

# Multi-format ingestion
zip = "2"                         # DOCX, ODT, PPTX (ZIP archives) — matches noxa-fetch version
quick-xml = "0.37"                # XML/OPML/RSS and DOCX word/document.xml — matches noxa-fetch version
feed-rs = "2.3"                   # RSS / Atom parsing
mailparse = "0.16"                # RFC 822 / MIME email parsing
strip-ansi-escapes = "0.2"        # .log file preprocessing

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = "0.1"

# HTTP client (plain reqwest — no primp patches needed for TEI/Qdrant)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# No qdrant-client crate — REST calls via plain reqwest (no protoc/gRPC dependency)

# Chunking
text-splitter = { version = "0.25", features = ["markdown", "tokenizers"] }
tokenizers = "0.21"

# UUID v5 for deterministic point IDs
uuid = { version = "1", features = ["v5", "serde"] }

# SHA-256 for startup scan delta detection (file content hashing)
sha2 = "0.10"

# Filesystem watcher
notify = "6"
notify-debouncer-full = "0.3"

# Concurrent data structures
dashmap = "6"

# URL parsing
url = "2"

# CLI args
clap = { workspace = true }

# Date/time for failed-jobs log
chrono = { version = "0.4", features = ["serde"] }

# CancellationToken for coordinated shutdown
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
