[package]
name = "noxa-store"
description = "Filesystem persistence layer for noxa — content store and operations log"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
noxa-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"
dirs = { workspace = true }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
